# unifiedCuda

./: CMakeLists.txt
include/: cudaFuncs.h
src/: cudaFuncs.cu  main.cpp  moreCudaFuncs.cu
